--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/SmartBoardAI.jsx"></script>
+
+    <!-- Исправлено: теперь подключается JS-файл сборки Vite -->
+    <script type="module" src="./src/SmartBoardAI.jsx"></script>
   </body>
 </html>
