--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="root"></div>
 
-    <!-- Исправлено: теперь подключается JS-файл сборки Vite -->
-    <script type="module" src="./src/SmartBoardAI.jsx"></script>
+    <!-- Түзетілді: енді папка атауы дұрыс -->
+    <script type="module" src="./источник/SmartBoardAI.jsx"></script>
   </body>
 </html>
